@@ -4,6 +4,7 @@ Roundcube Webmail MarkAsJunk2
 2012 01 21
 ==========
  * Update after r5781
+ * Add inital support for Larry
 
 2011 07 02
 ==========
